--- a/src/scss/utilities/_responsive.scss
+++ b/src/scss/utilities/_responsive.scss
@@ -14,6 +14,11 @@
 }
 
 
+// Responsive when screen is min
+//Usage:
+//@include responsive.min(600px) { ... }
+
+
 
 @mixin min($width: 1440px) {
 
