add layout to linkedin page

--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -19,6 +19,13 @@
     background-color: var(--color-dark);
     height: 100%;
 
+    // background: rgb(8, 19, 41);
+    // background: linear-gradient(
+    //   175deg,
+    //   rgba(8, 19, 41, 1) 0%,
+    //   rgba(28, 66, 143, 1) 100%
+    // );
+
     .nav-list {
       margin: 0;
       padding: 0;
