--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   background-color: var(--color-dark);
   gap: 4rem;
-  height: 100vh;
 
   .logo {
     margin: 3rem auto 0;
+    margin-left: 3rem;
 
     img {
       width: 7rem;
@@ -17,14 +17,6 @@
     position: sticky;
     top: 0;
     background-color: var(--color-dark);
-    height: 100%;
-
-    // background: rgb(8, 19, 41);
-    // background: linear-gradient(
-    //   175deg,
-    //   rgba(8, 19, 41, 1) 0%,
-    //   rgba(28, 66, 143, 1) 100%
-    // );
 
     .nav-list {
       margin: 0;
