--- a/src/scss/utilities/_responsive.scss
+++ b/src/scss/utilities/_responsive.scss
@@ -1,29 +1,37 @@
-
 // Responsive when screen is max
 //Usage:
 //@include responsive.max(600px) { ... }
 
-
-
 @mixin max($width: 480px) {
-
-    @media screen and (max-width: $width) {
-        @content; 
-    }
-
+  @media screen and (max-width: $width) {
+    @content;
+  }
 }
-
 
 // Responsive when screen is min
 //Usage:
 //@include responsive.min(600px) { ... }
 
-
-
 @mixin min($width: 1440px) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
 
-    @media screen and (min-width: $width) {
-        @content; 
-    }
+@mixin min($width: 1400px) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
 
+@mixin min($width: 1200px) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
+
+@mixin min($width: 1100px) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
 }
